<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameSDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_youku">Login</string>

    
    <string name="yk_notify_no">youkunotify</string>
    <string name="register_name_digits">.!@#%*_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string> 

    <string name="yk_no_sd_card_info">木有sd卡，请插入后再试</string>
    <string name="yk_sd_card_full_info">木有sd卡，请插入后再试</string>
    
     <string name="yk_text_verify_wrong">验证码错误</string>
     <string name="yk_text_hint_verify">验证码</string>
     <string name="yk_text_hint_new_pwd">新密码</string>
     <string name="yk_text_hint_pwd">密码</string>
     <string name="yk_btn_text_reset_pwd">重置密码并进入游戏</string>
     
     <string name="yk_text_prompt_user_not_exist">帐号不存在</string>
     <string name="yk_text_hint_phone_or_username">手机号或用户名</string>
  	 <string name="yk_btn_text_yzsf">验证身份</string>
  	 <string name="yk_btn_text_xczs">下次再说</string>
  	 <string name="yk_btn_text_wcbj">完成绑定</string>
  	 <string name="yk_text_0.0">0.0</string>
  	 <string name="yk_text_jbye">金币余额</string>
  	 <string name="yk_text_czjb">充值金币</string>
  	 <string name="yk_text_sxje">刷新余额</string>
  	 <string name="yk_text_10yuan">10元</string>
  	 <string name="yk_text_20yuan">20元</string>
  	 <string name="yk_text_30yuan">30元</string>
  	 <string name="yk_text_50yuan">50元</string>
  	 <string name="yk_text_100yuan">100元</string>
  	 <string name="yk_text_300yuan">300元</string>
  	 <string name="yk_text_hint_qtje">其他金额（元）</string>
  	 <string name="yk_text_prompt_dhbl1bi1">金币和人民币兑换比例为 1：1</string>
  	 <string name="yk_text_a_xyfwxy">查看YouKu虚拟社区币服务协议</string>
  	 <string name="yk_text_ljcz">立即充值</string>
  	 <string name="yk_text_prompt_yd_lt_ykt">支持：移动神州行 联通一卡充 电信一卡通</string>
  	 <string name="yk_text_mzyuan">面值(元):</string>
  	 <string name="yk_text_hint_card_no">卡号</string>
  	 <string name="yk_text_ywmc_stzf_djmc">业务名称：神腾支付。道具名称：</string>
  	 <string name="yk_text_fwtgs_yk">服务提供商：优酷土豆。客服电话：4007766368</string>
  	 <string name="yk_text_prompt_buy_msg">将通过手机话费支付方式购买，可能会收到计费通知短信。</string>
  	 <string name="yk_text_ykgame_pay">优酷游戏支付</string>
  	 <string name="yk_text_ykgame_paydetails">交易明细</string>
  	 <string name="yk_text_ykgame_announcement_title">公告</string>
  	 <string name="yk_text_000.00">￥000.00</string>
  	 <string name="yk_text_user_maohao">用户:</string>
  	 <string name="yk_text_null">null</string>
  	 <string name="yk_text_good_maohao">商品:</string>
  	 <string name="yk_text_0xingzuan">0星钻</string>
  	 <string name="yk_text_a_qzfbfk">去支付宝付款</string>
  	 <string name="yk_text_prompt_xzmzxtczk">选择面值相同的充值卡选项，否则会导致换取失败和充值卡作废。\n支付完成后余下金额将自动充入优酷金币。</string>
  	 <string name="yk_text_prompt_ljgd">了解更多</string>
  	 <string name="yk_text_hint_yyzczh">用于注册帐号</string>
  	 <string name="yk_btn_text_yzsf_1">验证身份</string>
  	 <string name="yk_text_nykyy">您也可以用</string>
  	 <string name="yk_text_a_yhmzc">用户名注册</string>
  	 <string name="yk_text_btn_yk_user_login">使用优酷帐号登录</string>
  	 <string name="yk_text_hint_user_name">用户名</string>
  	 <string name="yk_text_hint_yfpzh_modify">本账户是系统预分配，可进行修改</string>
  	 <string name="yk_text_hint_csmm_reg">输入密码，完成注册</string>
  	 <string name="yk_text_a_zcxy">用户注册协议</string>
  	 <string name="yk_text_btn_ljzc">立即注册</string>
  	 <string name="yk_text_btn_login_in">登录并进入游戏</string>
  	 <string name="yk_text_version_title">版本更新</string>
  	 <string name="yk_text_quit_title">退出</string>
  	 <string name="yk_text_btn_qx">取消</string>
  	 <string name="yk_text_btn_gx">更新</string>
  	 <string name="yk_text_btn_quit">退出</string>
  	 <string name="yk_text_wrong_username_pwd">用户名或密码错误</string>
  	 <string name="yk_text_hint_user_phone_email">手机号/用户名/邮箱帐号</string>
  	 <string name="yk_text_btn_yjzc">一键注册</string>
  	 <string name="yk_text_btn_ljdl">立即登录</string>
  	 <string name="yk_text_fsdxyz">将发送短信验证,查看</string>
  	 <string name="yk_text_yhzcxy">用户注册协议</string>
  	 <string name="yk_text_a_wjmm">忘记密码</string>
  	 <string name="yk_text_zzxz">正在下载</string>
  	 <string name="yk_text_bf0">0%</string>
  	 <string name="yk_text_btn_anzhuang">安装</string>
  	 <string name="yk_text_ykyx_user_title">优酷游戏用户登录</string>
   	 <string name="yk_text_hint_qsrsjh">输入绑定手机号</string>
     <string name="yk_text_hint_qsrdxyzm">输入短信验证码</string>
     <string name="yk_text_prompt_bdsj">注：绑定手机增强付费安全，可找回密码</string>
     <string name="yk_text_ykyx_title">优酷游戏</string>
     <string name="yk_text_jiahao">+</string>
     <string name="yk_text_jianhao">-</string>
     <string name="yk_text_mini_bt">标题</string>
     <string name="yk_text_dqsymmaqsrf">当前使用密码安全输入法</string>
     <string name="yk_image_bannar_content_des">bannar</string>
 	<string name="yk_text_a">a</string>
     <string name="yk_text_b">b</string>
     <string name="yk_text_c">c</string>
     <string name="yk_text_d">d</string>
     <string name="yk_text_e">e</string>
     <string name="yk_text_f">f</string>
     <string name="yk_text_g">g</string>
     <string name="yk_text_h">h</string>
     <string name="yk_text_i">i</string>
     <string name="yk_text_j">j</string>
     <string name="yk_text_k">k</string>
     <string name="yk_text_l">l</string>
     <string name="yk_text_m">m</string>
     <string name="yk_text_n">n</string>
     <string name="yk_text_o">o</string>
     <string name="yk_text_p">p</string>
     <string name="yk_text_q">q</string>
     <string name="yk_text_r">r</string>
     <string name="yk_text_s">s</string>
     <string name="yk_text_t">t</string>
     <string name="yk_text_u">u</string>
     <string name="yk_text_v">v</string>
     <string name="yk_text_w">w</string>
     <string name="yk_text_x">x</string>
     <string name="yk_text_y">y</string>
     <string name="yk_text_z">z</string>
     <string name="yk_text_A">A</string>
     <string name="yk_text_B">B</string>
     <string name="yk_text_C">C</string>
     <string name="yk_text_D">D</string>
     <string name="yk_text_E">E</string>
     <string name="yk_text_F">F</string>
     <string name="yk_text_G">G</string>
     <string name="yk_text_H">H</string>
     <string name="yk_text_I">I</string>
     <string name="yk_text_J">J</string>
     <string name="yk_text_K">K</string>
     <string name="yk_text_L">L</string>
     <string name="yk_text_M">M</string>
     <string name="yk_text_N">N</string>
     <string name="yk_text_O">O</string>
     <string name="yk_text_P">P</string>
     <string name="yk_text_Q">Q</string>
     <string name="yk_text_R">R</string>
     <string name="yk_text_S">S</string>
     <string name="yk_text_T">T</string>
     <string name="yk_text_U">U</string>
     <string name="yk_text_V">V</string>
     <string name="yk_text_W">W</string>
     <string name="yk_text_X">X</string>
     <string name="yk_text_Y">Y</string>
     <string name="yk_text_Z">Z</string>
     <string name="yk_text_1">1</string>
     <string name="yk_text_2">2</string>
     <string name="yk_text_3">3</string>
     <string name="yk_text_4">4</string>
     <string name="yk_text_5">5</string>
     <string name="yk_text_6">6</string>
     <string name="yk_text_7">7</string>
     <string name="yk_text_8">8</string>
     <string name="yk_text_9">9</string>
     <string name="yk_text_0">0</string>
     <string name="yk_text_athao"> \@ </string>
     <string name="yk_text_danmeiyuan"> $ </string>
     <string name="yk_text_jinghao"> # </string>
     <string name="yk_text_baifenhao"> % </string>
     <string name="yk_text_anpei">&amp;</string>
     <string name="yk_text_xinghao"> * </string>
     <string name="yk_text_zuokuohu"> ( </string>
     <string name="yk_text_youkuohu"> ) </string>
     <string name="yk_text_tanhao">!</string>
     <string name="yk_text_quot">&quot;</string>
     <string name="yk_text_apos"> \' </string>
     <string name="yk_text_maohao">:</string>
     <string name="yk_text_fenhao">;</string>
     <string name="yk_text_zuoxiegang">/</string>
     <string name="yk_text_bolang">~</string>
     <string name="yk_text_shugang">|</string>
     <string name="yk_text_chenghao">×</string>
     <string name="yk_text_chuhao">÷</string>
     <string name="yk_text_denghao">=</string>
     <string name="yk_text_lt">&lt;</string>
     <string name="yk_text_youjiantou">></string>
     <string name="yk_text_zuodakuohu">{</string>
     <string name="yk_text_youdakuohu">}</string>
     <string name="yk_text_qiuhehao">∑</string>
     <string name="yk_text_brs1">§</string>
     <string name="yk_text_qianfenhao">‰</string>
     <string name="yk_text_rhao">￥ </string>
     <string name="yk_text_aerfa">α</string>
     <string name="yk_text_beita">β</string>
     <string name="yk_text_gama">γ</string>
     <string name="yk_text_xigema">℃ </string>
     <string name="yk_text_zuozhongkuohu">[</string>
     <string name="yk_text_youzhongkuohu">]</string>
     <string name="yk_text_xiahuaxian"> _ </string>
     <string name="yk_text_shangjianhao"> ^ </string>
     <string name="yk_text_jiajianhao">±</string>
     <string name="yk_text_danyinhao">’</string>
     <string name="yk_text_shuangxx"> \\ </string>
     <string name="yk_text_youdanyinhao"> ` </string>
     <string name="yk_text_wenhao"> \?</string>
     <string name="yk_text_123">123</string>
     <string name="yk_text_abc">abc</string>
     <string name="yk_text_douhao">,</string>
     <string name="yk_text_dian">.</string>
     <string name="yk_text_meiyuan2"> $ </string>
     <string name="yk_text_queding">确定</string>
     <string name="yk_text_jiaoyimingxi">交易明细</string>
     
     <string name="yk_content_description_mini_root">mini_root</string>
     <string name="yk_content_description_mini_linBlocksConpent">mini_linBlocksConpent</string>
     <string name="yk_content_description_mini_ui_input_layout">mini_ui_input_layout</string>
     <string name="yk_content_description_mini_ui_input_content">mini_ui_input_content</string>
     <string name="yk_content_description_uicomponenet">uicomponenet</string>
     <string name="yk_content_description_checkbox_relativelayout">checkbox_relativelayout</string>
     <string name="yk_content_description_checkbox_mini_layout_relativeLayout">mini_layout_relativeLayout</string>
     
     
  <!-- 自定义组件 -->
    <string name="yk_pull_to_refresh">下拉可以刷新</string>
    <string name="yk_release_to_refresh">松开可以刷新</string>
    <string name="yk_lastUpdateTime">最近更新：%s</string>
    <string name="yk_load_full">已加载全部</string>
    <string name="yk_no_data">暂无数据</string>
    <string name="yk_more">加载中</string>
</resources>
