<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
    <LinearLayout android:id="@+id/yk_pay_goldrecha_content_linear"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:orientation="vertical"
		android:paddingTop="@dimen/yk_xh_18px">
		<RelativeLayout android:id="@+id/yk_pay_recharge_line1_linear"
	        android:layout_width="@dimen/yk_xh_427px"
			android:layout_height="wrap_content" 
			android:orientation="horizontal"
			android:layout_weight="1">
			<TextView android:id="@+id/yk_pay_goldrecha_10yuan_txt"
                android:layout_width="@dimen/yk_xh_138px"
                android:layout_height="@dimen/yk_xh_58px"
                android:background="@drawable/yk_pay_operator_unselected"
                android:gravity="center"
                android:text="@string/yk_text_10yuan"
                android:textSize="@dimen/yk_xh_26px"
                android:textColor="#717171" />
			<TextView android:id="@+id/yk_pay_goldrecha_20yuan_txt"
                android:layout_width="@dimen/yk_xh_138px"
                android:layout_height="@dimen/yk_xh_58px"
                android:background="@drawable/yk_pay_operator_unselected"
                android:gravity="center"
                android:text="@string/yk_text_20yuan"
                android:textSize="@dimen/yk_xh_26px"
                android:textColor="#717171"
				android:layout_centerInParent="true"/>
			<TextView android:id="@+id/yk_pay_goldrecha_30yuan_txt"
                android:layout_width="@dimen/yk_xh_138px"
                android:layout_height="@dimen/yk_xh_58px"
                android:background="@drawable/yk_pay_operator_unselected"
                android:gravity="center"
                android:text="@string/yk_text_30yuan"
                android:textSize="@dimen/yk_xh_26px"
                android:textColor="#717171"
				android:layout_alignParentRight="true"/>
		</RelativeLayout>
		<RelativeLayout android:id="@+id/yk_pay_recharge_line2_linear"
	        android:layout_width="@dimen/yk_xh_427px"
			android:layout_height="wrap_content" 
			android:orientation="horizontal"
			android:layout_marginTop="@dimen/yk_xh_7px">
			<TextView android:id="@+id/yk_pay_goldrecha_50yuan_txt"
                android:layout_width="@dimen/yk_xh_138px"
                android:layout_height="@dimen/yk_xh_58px"
                android:background="@drawable/yk_pay_operator_unselected"
                android:gravity="center"
                android:text="@string/yk_text_50yuan"
                android:textSize="@dimen/yk_xh_26px"
                android:textColor="#717171" />
			<TextView android:id="@+id/yk_pay_goldrecha_100yuan_txt"
                android:layout_width="@dimen/yk_xh_138px"
                android:layout_height="@dimen/yk_xh_58px"
                android:background="@drawable/yk_pay_operator_unselected"
                android:gravity="center"
                android:text="@string/yk_text_100yuan"
                android:textSize="@dimen/yk_xh_26px"
                android:textColor="#717171"
				android:layout_centerInParent="true"/>
			<TextView android:id="@+id/yk_pay_goldrecha_300yuan_txt"
                android:layout_width="@dimen/yk_xh_138px"
                android:layout_height="@dimen/yk_xh_58px"
                android:background="@drawable/yk_pay_operator_unselected"
                android:gravity="center"
                android:text="@string/yk_text_300yuan"
                android:textSize="@dimen/yk_xh_26px"
                android:textColor="#717171"
				android:layout_alignParentRight="true"/>
		</RelativeLayout>
		
		<EditText android:id="@+id/yk_pay_goldrecha_othernum_edt"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/yk_text_hint_qtje"
		    android:inputType="number"
		    android:textColor="#717171"
		    android:textSize="@dimen/yk_xh_26px"
		    android:paddingLeft="@dimen/yk_xh_10px"
		    android:paddingTop="@dimen/yk_xh_30px"
		    android:layout_marginTop="@dimen/yk_xh_10px"
		    android:textColorHint="@color/edit_text_hint"
			android:background="@null"
			android:singleLine="true"
			android:maxLength="30"/>
		<include layout="@layout/yk_edt_line_include"/>
		<TextView android:id="@+id/yk_pay_goldrecha_othernum_txt"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/yk_text_prompt_dhbl1bi1"
		    android:textColor="#b3b3b3"
		    android:textSize="@dimen/yk_xh_26px"
		    android:layout_marginTop="@dimen/yk_xh_26px"/>
		<LinearLayout android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginTop="@dimen/yk_xh_70px"
		    android:gravity="center_vertical">			<ImageView android:id="@+id/yk_pay_goldrecha_fit_img"
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:background="@drawable/yk_pay_fit"/>			<TextView android:id="@+id/yk_pay_goldrecha_protocol_txt"
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/yk_text_a_xyfwxy"
		    	android:textSize="@dimen/yk_xh_26px"
		    	android:textColor="@drawable/yk_tv_hink_find_pwd_selector"/>
		</LinearLayout>
		<TextView android:id="@+id/yk_pay_goldrecha_did_chongzhi_txt"
		    android:layout_width="@dimen/yk_xh_428px"
		    android:layout_height="@dimen/yk_xh_88px"
		    android:text="@string/yk_text_ljcz"
		    android:textSize="@dimen/yk_xh_36px"
			android:textColor="#ffffff"
			android:background="#ff9c00"
			android:gravity="center"
			android:layout_marginTop="@dimen/yk_xh_26px"/>
	</LinearLayout>
</LinearLayout>