<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="@dimen/yk_xh_550px"
	android:layout_height="fill_parent" 
	android:orientation="vertical"
	android:gravity="center">
	<LinearLayout 
	    android:layout_width="@dimen/yk_xh_550px"
		android:layout_height="fill_parent" 
		android:background="@color/ykbgColor"
		android:orientation="vertical">
	<RelativeLayout
		android:layout_width="fill_parent"
        android:layout_height="@dimen/yk_xh_100px"
        android:background="@color/ykbgColor">
	  <TextView android:id="@+id/yk_dialog_show_exit_title_txt"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:textSize="@dimen/yk_tv_title_font_size"
	    android:textColor="@color/text_title"
	    android:text="@string/yk_text_version_title"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_height="1dp"
	    android:layout_width="fill_parent"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@color/title_line"></LinearLayout>
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/yk_tv_update_msg_height"
        android:background="@color/ykbgColor"
        android:paddingLeft="@dimen/yk_xh_44px"
        android:paddingRight="@dimen/yk_xh_44px">
	   <TextView android:id="@+id/yk_dialog_show_exit_content_txt"
			android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:layout_centerVertical="true"
		    android:textSize="@dimen/yk_update_msg_fontsize"
		    android:textColor="@color/loading_btn_cancel"
			/>
	</RelativeLayout>
	<LinearLayout 
		android:layout_height="1dp"
		android:layout_width="fill_parent"
		android:background="@color/title_line_bellow"></LinearLayout>
	<LinearLayout
	    android:layout_width="@dimen/yk_xh_550px"
	    android:layout_height="@dimen/yk_loading_btn_height"
	    android:orientation="horizontal"
	    android:background="#FFFFFFFF" >
		<Button
	      	android:layout_width="0dp"
	      	android:layout_height="fill_parent"
	      	android:layout_weight="1"
	      	android:background="@drawable/yk_btn_white_selector"
	      	android:text="@string/yk_text_btn_qx"
	      	android:textColor="@color/loading_btn_cancel"
	      	android:textSize="@dimen/yk_btn_font_size"
	      	android:id="@+id/btn_confirm" />
		<LinearLayout 
			android:layout_height="fill_parent"
		  	android:layout_width="1dp"
		    android:background="@color/title_line_bellow"></LinearLayout>
		<Button
	      	android:layout_height="fill_parent"
	      	android:layout_width="0dp"
	      	android:layout_weight="1"
			android:background="@drawable/yk_btn_light_blue_selector"
			android:text="@string/yk_text_btn_gx"
			android:textColor="@color/loading_btn_cancel"
			android:textSize="@dimen/yk_btn_font_size"
			android:id="@+id/btn_cancel" />
	</LinearLayout>
	</LinearLayout>
</LinearLayout>